<resources>
    <string name="app_name">VietnamSurgery</string>
    <string name="baseURL">http://vietnamcloudapi.azurewebsites.net</string>
    <string name="badRequest">Bad Request</string>

    <!-- Menu items -->
    <string name="home">Home</string>
    <string name="formContentAnswers">Filled in forms</string>
    <string name="not_logged_in">Not logged in</string>
    <string name="users">Users</string>
    <string name="login">Login</string>
    <string name="logout">Log out</string>
    <string name="next">Next</string>
    <string name="delete">Delete</string>
    <string name="addUser">Add User</string>
    <string name="createNewForm">Create New Form</string>

    <!-- BaseActivity -->
    <string name="BaseAdminCheck">Admin</string>
    <string name="logoutTitle">Log out?</string>
    <string name="logoutMessage">Are you sure you want to log out?</string>
    <string name="cancelLogout">Cancel</string>
    <string name="confirmLogout">Log out</string>
    <string name="activityForm">activities.FormListActivity</string>
    <string name="activityUsers">activities.UsersActivity</string>
    <string name="activityLogin">activities.LoginActivity</string>

    <!-- CameraActivity -->
    <string name="imagesSaved">Images successfully saved!</string>
    <string name="exitTitle">Exit?</string>
    <string name="imageLoss">Going back without saving erases the pictures</string>
    <string name="exitPhotos">Exit Photos</string>
    <string name="cancel">Cancel</string>
    <string name="tapInstruction">Image loading. \nTap to refresh</string>

    <!-- ChangePasswordActivity -->
    <string name="oldPassword">Old Password</string>
    <string name="newPassword">New Password</string>
    <string name="confirmNewPassword">Confirm New Password</string>
    <string name="changePassword">Change Password</string>
    <string name="passwordChanged">Password is changed, please login again</string>
    <string name="loginCaps">LOGIN</string>
    <string name="changePasswordEmptyFields">Please make sure all the fields are filled in</string>
    <string name="noPasswordMatch">New Password does not match Confirm New Password</string>
    <string name="passwordNotChanged">Password could not be changed now, please try again later</string>

    <!-- FormActivity -->
    <string name="forms">Forms</string>
    <string name="name">Name</string>
    <string name="district">District</string>
    <string name="birthYear">Birth year</string>
    <string name="date">Date</string>
    <string name="isRequired">is required.</string>
    <string name="isNotANumber">is not a number.</string>
    <string name="formErrorTitle">Form Invalid:&#160;</string>
    <string name="ok">Ok</string>

    <!-- FormListActivity -->
    <string name="formContentFormList">Filled in forms</string>
    <string name="uploadProgressInfo">Upload progress: %s of %s.</string>
    <string name="uploadDone">Uploading done!</string>
    <string name="uploadErrorDialogTitle">Upload errors.</string>
    <string name="uploadDialogTitle">Do you want to upload local content?</string>
    <string name="uploadDialogMessage">The local content that is uploaded will be deleted!</string>
    <string name="uploadLoginDialogTitle">You are not logged in.</string>
    <string name="uploadLoginDialogMessage">To upload local content you must log in first.</string>
    <string name="retry">Retry</string>
    <string name="uploadInfoFailed">Uploading failed. Tap here for more info.</string>
    <string name="uploadNoInternetDialogTitle">No network available.</string>
    <string name="uploadNoInternetDialogMessage">No internet connection available. Please try again later</string>
    <string name="backDialogTitle">Go back?</string>
    <string name="backDialogMessage">Editing can be done by tapping the section you want to edit. Data will be lost if you go back.</string>

    <!-- FormOverviewActivity -->
    <string name="photoGalleryTitle">Photos</string>
    <string name="deleteDialogTitle">Delete this content?</string>
    <string name="deleteDialogMessage">Are you sure you want to permanently delete this content?</string>
    <string name="saveDialogTitle">Save this content?</string>
    <string name="saveDialogMessage">Are you sure you want to save this content?</string>

    <!-- LoginActivity -->
    <string name="loginTitle">Login</string>
    <string name="loginNoInternet">No internet connection available. Please try again later</string>
    <string name="loginEmptyFields">Please check if all fields are filled in</string>
    <string name="granttypePassword">password</string>
    <string name="loggedIn">Successfully logged in, returning to homepage</string>
    <string name="notLoggedIn">Login could not be performed right now. Please try again later</string>
    <string name="failedLogin">Incorrect username or password</string>
    <string name="emailLoginHint">Email</string>
    <string name="passwordLoginHint">Password</string>
    <string name="loginPageButton">Login</string>

    <!-- MainActivity -->
    <string name="chooseForm">Choose a form to fill in:</string>
    <string name="formName">Form template name:</string>
    <string name="formTemplateUse"># Used</string>
    <string name="homeTitle">Home</string>
    <string name="exit">Please click BACK again to exit</string>
    <string name="deleteFormTitle">Delete Form Template?</string>
    <string name="deleteFormMessage">Are you sure you want to delete form:&#160;</string>
    <string name="cancelDeleteForm">Cancel</string>
    <string name="confirmDeleteForm">Delete</string>
    <string name="noAccessDeleteForm">Please log in as Admin to delete Forms</string>

    <!-- PhotoDetailActivity -->
    <string name="camera_title">Photos</string>
    <string name="deleteTitle">Delete picture?</string>
    <string name="deleteMessage">Are you sure you want to delete this picture?</string>
    <string name="cancelPhotoDelete">No</string>
    <string name="confirmPhotoDelete">Yes</string>

    <!-- RegisterActivity -->
    <string name="addUserTitle">Add User</string>
    <string name="adminRegisterDropdown">Admin</string>
    <string name="userRegisterDropdown">User</string>
    <string name="registerNoInternet">No internet connection available. Please try again later</string>
    <string name="registerEmptyFields">Please check if all fields are filled in</string>
    <string name="wrongEmailFormat">Emailadress is incorrect</string>
    <string name="passwordError">Confirm Password does not match Password</string>
    <string name="userAdded">User successfully added</string>
    <string name="userOverview">User Overview</string>
    <string name="passwordFormatError">Password must contain at least one capital, one number, and one special character</string>
    <string name="userNotAdded">User could not be added right now. Please try again later</string>
    <string name="roleLabel">Role:</string>
    <string name="emailRegisterHint">Email</string>
    <string name="passwordRegisterHint">Password</string>
    <string name="confirmpassword">Confirm password</string>
    <string name="addUserButton">Add User</string>
    <string name="exitRegisterTitle">Exit?</string>
    <string name="exitRegisterMessage">Are you sure you want to exit? Unsaved changes will be lost</string>
    <string name="cancelExit">Cancel</string>
    <string name="exitRegister">Exit</string>

    <!-- Users Listitem -->
    <string name="listitemUsername">Username</string>
    <string name="listitemRole">Role</string>

    <!-- UsersActivity -->
    <string name="usersNoInternet">No internet connection available. Please try again later</string>
    <string name="usersTryAgain">Users could not be loaded right now. Please try again later</string>
    <string name="usersTitle">Users</string>
    <string name="noAccess">You have no access to this area. Login as admin to view this page</string>
    <string name="userDeleted">User successfully deleted!</string>
    <string name="loginSnackbar">Login</string>
    <string name="adminCheck">Admin</string>
    <string name="deleteUserTitle">Delete user?</string>
    <string name="deleteUserMessage">Are you sure you want to delete user&#160;</string>
    <string name="cancelDelete">Cancel</string>
    <string name="confirmDelete">Delete</string>
    <string name="usernameTitle">Username:</string>
    <string name="roleTitle">Role:</string>

    <!-- CreateFormActivity -->
    <string name="createFormTitle">Create New Form</string>
    <string name="saveNewForm">Save</string>
    <string name="createFormHeaderText">In each form we have some fields that are necessary to fill in, so these subjects and fields are already set. To add more fields in a subject, you can click on the subject title. To add more subjects, you can press the plus-button on the bottom-right of this screen. To delete a question or section, keep it shortly pressed (mandatory fields can not be deleted).</string>
    <string name="createFormNameHint">Form name (district of use)</string>
    <string name="personalInfo">Personal Info</string>
    <string name="contactInfo">Contact Info</string>
    <string name="namePersonalInfo">Name</string>
    <string name="birthyearPersonalInfo">Birthyear</string>
    <string name="districtContactInfo">District</string>
    <string name="stringToText">Text</string>
    <string name="choiceToDropDown">DropDown</string>
    <string name="deleteQuestionTitle">Delete Question?</string>
    <string name="deleteQuestionMessage">Are you sure you want to delete question:&#160;</string>
    <string name="deleteQuestion">Delete</string>
    <string name="cancelDeleteQuestion">Cancel</string>
    <string name="formNameEmpty">Formname is not filled in</string>
    <string name="formNameEmptyMessage">Please fill in a formname</string>
    <string name="back">Back</string>
    <string name="saveForm">Save Form</string>
    <string name="saveFormMessage">Do you want to save this form?</string>
    <string name="deleteSubjectTitle">Delete this subject?</string>
    <string name="deleteSubjectMessage">Are you sure you want to delete the subject:&#160;</string>
    <string name="answerType">Input</string>
    <string name="exitCreateForm">Exit?</string>
    <string name="exitCreateFormMessage">Are you sure you want to exit? Unsaved changes will be lost.</string>
    <string name="cancelExitCreateForm">Cancel</string>
    <string name="exitCreateFormConfirm">Exit</string>
    <string name="requiredOverview">(Required)&#160;</string>

    <!-- AddSectionActivity -->
    <string name="addSectionTitle">Add Section</string>
    <string name="sectionName">Section Name</string>
    <string name="addSectionButton">Add Section</string>
    <string name="noSectionName">Please fill in a name for this section</string>

    <!-- AddQuestionActivity -->
    <string name="addQuestionTitle">Add Question</string>
    <string name="questionName">Question</string>
    <string name="addQuestionButton">Add Question</string>
    <string name="required">Required</string>
    <string name="addOptions">Add another option       +</string>
    <string name="option">Option</string>
    <string name="desiredInput">Desired inputtype:</string>
    <string name="questionNameEmpty">Please fill in a question name</string>
    <string name="notEnoughOptions">For a dropdown field, please fill in at least 2 options</string>

    <!-- Overig -->
    <string name="refresh">Refresh</string>
    <string name="save">Save</string>
    <string name="upload">Upload</string>
    <string name="unavailable">Unavailable</string>
    <string name="test">Test</string>
</resources>
