<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/changePassword_frame_layout">

        <LinearLayout
            android:id="@+id/changePassword_linear_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="?attr/actionBarSize"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/oldPasswordEditText"
                    android:layout_width="150dp"
                    android:layout_height="20dp"
                    android:background="@null"
                    android:inputType="textPassword"
                    android:hint="@string/oldPassword" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/newPasswordEditText"
                    android:layout_width="150dp"
                    android:layout_height="20dp"
                    android:layout_marginTop="20dp"
                    android:background="@null"
                    android:inputType="textPassword"
                    android:hint="@string/newPassword"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/confirmNewPasswordEditText"
                    android:layout_width="150dp"
                    android:layout_height="20dp"
                    android:layout_marginTop="20dp"
                    android:background="@null"
                    android:inputType="textPassword"
                    android:hint="@string/confirmNewPassword"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/changePassword_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/mybutton"
                android:text="@string/changePassword"/>
        </LinearLayout>
    </FrameLayout>
